# Q-HybridCrypt

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  tests.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_FA.md  ARCHITECTURE_ZH.md  MIGRATION_FA.md  MIGRATION_GUIDE.md  MIGRATION_ZH.md  README_FA.md  README_ZH.md  SECURITY.md  SECURITY_FA.md  SECURITY_ZH.md
examples/: basic_usage.py  migration_example.py
qhybridcrypt/: __init__.py  aes_gcm.py  argon2id.py  cascade.py  chacha20.py  constants.py  core.py  entropy.py  lattice_kem.py  migration.py  utils.py
tests/: test_core.py  test_migration.py
